# espa-dockerfiles

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.example  Makefile  README.md  README.txt  archive-image.sh  build-base-buildpack.sh  build-base-development.sh  build-base-gcc.sh  build-base-image.sh  build-base-python.sh  build-espa-cloud-masking-rpm.sh  build-espa-product-formatter-rpm.sh  example-processing.conf  example-run-espa-cmd.sh  example-use-these-science-apps.sh  fix-espa-versions.sh  flatten-image.sh  get-image-short-id.py  restore-image.sh  run-development-shell.sh  source-of-cots-and-tools.txt  stop-containers-using-image.sh  version.txt
SPECS/: RPM-CFmask.spec  RPM-espa-product-formatter.spec
alpine/base/: Dockerfile
base-buildpack/: Dockerfile  TODO.txt
base-development/: Dockerfile  source-of-cots.txt
base-gcc/: Dockerfile  TODO.txt
base-image/: CMakeLists.txt  Dockerfile  README.txt
base-python/: Dockerfile
centos/: CMakeLists.txt
centos/base/: CMakeLists.txt  Dockerfile
external_tools/: retrieve-external-tools.sh
modtran-build-image/: CMakeLists.txt  Dockerfile.in
modtran-image/: CMakeLists.txt  Dockerfile.in
science-image/: CMakeLists.txt
scripts/: archive-image.sh  get-container-long-id.py  get-container-short-id.py  get-image-long-id.py  remove-all-stopped-containers.sh  remove-containers-using-image.sh  remove-dangling-images.sh  restore-image.sh  run-entrypoint-container.sh  stop-containers-using-image.sh
thirdparty-image/: CMakeLists.txt  Dockerfile.in
ubuntu/: container-entrypoint.sh
(+46 files in other folders)
